# R2DRL

./: .gitignore  README.md
R2DRL/helios-base/src/: Makefile  keepaway.sh  sample_player  sample_trainer  start.sh  train.sh
R2DRL/helios-base/src/coach/: Makefile  Makefile.in  sample_coach  sample_coach.cpp  sample_coach.h
R2DRL/helios-base/src/player/: Makefile  Makefile.in  bhv_basic_move.h  bhv_basic_tackle.h  bhv_penalty_kick.cpp  sample_player.cpp  sample_player.h  strategy.cpp
R2DRL/helios-base/src/trainer/: Makefile  (+4 more)
R2DRL/librcsc/: configure~
R2DRL/librcsc/rcsc/: Makefile  Makefile.in  librcsc.la
R2DRL/robocup2d/: README.md  __init__.py  config.py  env.py  init_scaffold.py  logging_utils.py  pyproject.toml  robocup.yaml  run.sh
R2DRL/robocup2d/ipc/: __init__.py  handshake.py  shm_manager.py
R2DRL/robocup2d/process/: __init__.py  housekeeping.py  killer.py  launcher.py  locks.py  ports.py  watchdog.py
R2DRL/robocup2d/protocols/: __init__.py  coach_shm.py  common.py  player_shm.py  trainer_shm.py
helios-base/src/: Makefile  Makefile.in  keepaway.sh  sample_coach
helios-base/src/coach/: Makefile  Makefile.am  sample_coach  sample_coach.cpp
helios-base/src/player/: Makefile  Makefile.am  bhv_basic_move.cpp  bhv_basic_tackle.cpp  sample_player.cpp  sample_player.h  stderr.3586353
helios-base/src/trainer/: Makefile  Makefile.in
pymarl/src/envs/: robocup.py
robocup2d/: README.md  logging_utils.py  robocup.yaml
robocup2d/ipc/: __init__.py  handshake.py
robocup2d/process/: __init__.py  locks.py
robocup2d/protocols/: player_shm.py
(+474 files in other folders)
