[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robocup-env"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["numpy", "psutil", "pyyaml", "torch"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
