[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robocup2d"
version = "0.1.0"
description = "RoboCup 2D Soccer Simulation Reinforcement Learning Environment"
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.19.0",
    "psutil>=5.8.0",
    "pyyaml>=5.4.0",
    "torch>=1.9.0"
]
authors = [
    {name = "R2DRL Team"}
]

[tool.setuptools]
package-dir = {"" = ".."}
packages = ["robocup2d", "robocup2d.ipc", "robocup2d.process", "robocup2d.protocols"]

[tool.setuptools.package-data]
robocup2d = ["*.yaml"]
